peticiones http back basic

--- a/gestion-mercado/src/styles.css
+++ b/gestion-mercado/src/styles.css
@@ -34,7 +34,7 @@ h1, h2, h3, h4, h5, h6 {
     font-family: "Kanit", sans-serif;
 }
 
-p, span, label, :placeholder-shown, button, a {
+p, span, label, :placeholder-shown, button, a, th, td {
     font-size: 1.75rem;
     font-weight: 400;
     font-family: "Proza Libre", sans-serif;
