--- a/gestion-mercado/src/app/pages/product-pages/product-list/product-list.html
+++ b/gestion-mercado/src/app/pages/product-pages/product-list/product-list.html
@@ -1,10 +1,13 @@
+<h2>PRODUCTOS</h2>
+
 <ul>
   @for(product of products(); track $index) {
-    {{product.nombre}} {{product.categoria}}
-  
+    <p>{{product.nombre}}</p>
+    <p>{{product.categoria}}</p>
+
     <div class = "actions">
       <button (click) = "updateProduct(product)">Editar</button>
-      <button (click) = "deleteProduct(product.id)">Eliminar</button>
+      <button (click) = "deleteProduct(product.producto_id)">Eliminar</button>
     </div>
   }
 </ul>
