--- a/gestion-mercado/src/app/pages/product-pages/product-list/product-list.html
+++ b/gestion-mercado/src/app/pages/product-pages/product-list/product-list.html
@@ -6,8 +6,8 @@
     <p>{{product.categoria}}</p>
 
     <div class = "actions">
-      <button (click) = "updateProduct(product)">Editar</button>
-      <button (click) = "deleteProduct(product.producto_id)">Eliminar</button>
+      <button type="button" (click)="updateProduct(product)">Editar</button>
+      <button type="button" (click)="deleteProduct(product.producto_id)">Eliminar</button>
     </div>
   }
 </ul>
