INTENTO DE FORM INVENTARIO
no anda muy correcto pero mañana lo arreglo (enloqueceré)

--- a/gestion-mercado/src/app/pages/inventario-pages/inventarios-list/inventarios-list.html
+++ b/gestion-mercado/src/app/pages/inventario-pages/inventarios-list/inventarios-list.html
@@ -17,7 +17,7 @@
     @for (i of inventarios(); track $index) {
       <tr>
         <td>{{ i.inventario_id }}</td>
-        <td>{{ i.producto_id }}</td>
+        <td>{{ i.productoId }}</td>
         <td>{{ i.cantidad }}</td>
         <td>{{ i.stockMin }}</td>
         <td>{{ i.precioVenta }}</td>
