--- a/gestion-mercado/src/app/pages/persona-pages/persona-form/persona-form.html
+++ b/gestion-mercado/src/app/pages/persona-pages/persona-form/persona-form.html
@@ -1,1 +1,27 @@
-<p>persona-form works!</p>
+<h2> {{isEditMode() ? 'Editar Persona' : 'Registrar Persona'}} </h2>
+
+<form [formGroup]="form" (ngSubmit)="savePersona()">
+ <div>
+    <label>Nombre: </label>
+    <input type="text" formControlName="nombre">
+ </div>
+ <div>
+   <label>Dni: </label>
+    <input type="number" formControlName="dni">
+ </div>
+ <div>
+   <label>Edad: </label>
+    <input type="number" formControlName="edad">
+ </div>
+
+ <div class="botones">
+  <button type="submit"[disabled]="form.invalid">
+   {{ isEditMode() ? 'Actualizar' : 'Registrar' }}
+  </button>
+
+  @if (isEditMode()) {
+    <button type="button" (click)="cancelEdit()" >Cancelar</button>
+  }
+ </div>
+
+</form>
