Menu duenio, nuevas rutas, otros
Se cambiaron las rutas para llevar un formato especifico en los menus y para agregar breadcrumbs al futuro
Se cambio de lugar y el nombre de

 productos register

--- a/gestion-mercado/src/app/components/header/header.css
+++ b/gestion-mercado/src/app/components/header/header.css
@@ -19,8 +19,18 @@
     right: 0;
     bottom: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.781); 
-    z-index: -1; 
+    background-color: rgba(0, 0, 0, 0.781);
+    z-index: -1;
+}
+
+.header-izq{
+  display: flex;
+}
+
+.header-der {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
 }
 
 
