--- a/gestion-mercado/src/app/pages/inventario-pages/inventarios-list/inventarios-list.html
+++ b/gestion-mercado/src/app/pages/inventario-pages/inventarios-list/inventarios-list.html
@@ -1,5 +1,9 @@
 <h2>Inventario</h2>
 
+<div class="botones">
+  <button type="button" class="btnAgregar" routerLink="/menu/inventarios/form"> Agregar </button>
+</div>
+
 <table border="1">
   <thead>
     <tr>
