--- a/gestion-mercado/src/app/pages/lote-pages/lotes-list/lotes-list.html
+++ b/gestion-mercado/src/app/pages/lote-pages/lotes-list/lotes-list.html
@@ -1,5 +1,9 @@
 <h2>Listado de Lotes</h2>
 
+<div class="botones">
+    <button type="button" class="btnAgregar" routerLink="/menu/lotes/form"> Agregar </button>
+</div>
+
 <table>
   <thead>
     <tr>
