--- a/gestion-mercado/src/app/pages/persona-pages/persona-list/persona-list.html
+++ b/gestion-mercado/src/app/pages/persona-pages/persona-list/persona-list.html
@@ -1,6 +1,9 @@
 
 <section class="contenerdorPersonaList">
 
+  <div class="botones">
+    <button type="button" class="btnAgregar" routerLink="/menu/personas/form"> Agregar </button>
+  </div>
 
   <table class="tablaPersonas">
     <thead class="encabezado">
