--- a/gestion-mercado/src/app/pages/cuentaBancaria-pages/cuentas-bancarias-form/cuentas-bancarias-form.html
+++ b/gestion-mercado/src/app/pages/cuentaBancaria-pages/cuentas-bancarias-form/cuentas-bancarias-form.html
@@ -1,1 +1,22 @@
-<p>cuentas-bancarias-form works!</p>
+<h2> {{ isEditMode() ? 'Editar Cuenta Bancaria' : 'Registrar Cuenta Bancaria' }} </h2>
+
+<form [formGroup]="form" (ngSubmit)="saveCuentaBancaria()">
+  <div>
+    <label>CBU: </label>
+    <input type ="number" formControlName="cbu">
+  </div>
+  <div>
+    <label>Saldo: </label>
+    <input type="number" formControlName="saldo">
+  </div>
+
+  <div class = "botones">
+    <button type="submit" [disabled]="form.invalid">
+        {{ isEditMode() ? 'Actualizar' : 'Registrar' }}
+      </button>
+
+      @if (isEditMode()){
+        <button type="button" (click)="cancelarUpdate()">Cancelar</button>
+      }
+  </div>
+</form>
