--- a/gestion-mercado/src/app/pages/menu-page/menu-page.html
+++ b/gestion-mercado/src/app/pages/menu-page/menu-page.html
@@ -9,8 +9,8 @@
         <li class="card" >
             <a routerLink="/menu/personas"> <div class="personas"></div> </a>
             <div class="icon-container">
-              <img class="icon" src="https://i.pinimg.com/736x/77/11/f7/7711f727871dc8fd2e31e459262e907d.jpg" alt="persona-icon">
-              <p> PERSONAS </p>
+              <img class="icon" src="/gestion-mercado/src/assets/images/persona-icon.png" alt="persona-icon">
+              <p> PERSONAAAAS </p>
             </div>
         </li>
         <li class="card" >
@@ -23,7 +23,7 @@
         <li class="card" >
             <a routerLink="/menu/usuarios"> <div class="usuarios"></div> </a>
             <div class="icon-container">
-              <img class="icon" src="https://static.vecteezy.com/system/resources/previews/000/550/731/original/user-icon-vector.jpg" alt="usuario-icon">
+              <img class="icon" src="ASD" alt="usuario-icon">
               <p> USUARIOS(sin page) </p>
             </div>
         </li>
@@ -37,7 +37,7 @@
         <li class="card" >
             <a routerLink="/menu/cuentas-bancarias"> <div class="cuentasB"></div> </a>
             <div class="icon-container">
-              <img class="icon" src="https://static.vecteezy.com/system/resources/previews/000/347/894/original/bank-vector-icon.jpg" alt="cuenta bancaria-icon">
+              <img class="icon" src="asd2" alt="cuenta bancaria-icon">
               <p> CUENTA BANCARIA </p>
             </div>
         </li>
