--- a/gestion-mercado/src/app/pages/menu-page/menu-page.html
+++ b/gestion-mercado/src/app/pages/menu-page/menu-page.html
@@ -6,38 +6,38 @@
     <p> (poner un if q printee el tipo de rol actual)  </p>
     <nav class="menus-container">
       <ul class="menus">
-        <li class="card" >
-            <a routerLink="/menu/personas"> <div class="personas"></div> </a>
+        <li class="card" id="personas" >
+            <a routerLink="/menu/personas"> <div class="personas-recuadro"></div> </a>
             <div class="icon-container">
-              <img class="icon" src="/gestion-mercado/src/assets/images/persona-icon.png" alt="persona-icon">
-              <p> PERSONAAAAS </p>
+              <img class="icon" src="/assets/images/persona-icon.png" alt="persona-icon">
+              <p> PERSONAS </p>
             </div>
         </li>
-        <li class="card" >
-            <a routerLink="/menu/productos"> <div class="productos"></div> </a>
+        <li class="card" id="productos" >
+            <a routerLink="/menu/productos"> <div class="productos-recuadro"></div> </a>
             <div class="icon-container">
-              <img class="icon" src="https://tse1.mm.bing.net/th/id/OIP.SgUljQxIfdi5JKFy5TgBBwHaHa?rs=1&pid=ImgDetMain&o=7&rm=3" alt="producto-icon">
+              <img class="icon" src="/assets/images/productos-icon.png" alt="producto-icon">
               <p> PRODUCTOS </p>
             </div>
         </li>
-        <li class="card" >
-            <a routerLink="/menu/usuarios"> <div class="usuarios"></div> </a>
+        <li class="card" id="usuarios" >
+            <a routerLink="/menu/usuarios"> <div class="usuarios-recuadro"></div> </a>
             <div class="icon-container">
-              <img class="icon" src="ASD" alt="usuario-icon">
+              <img class="icon" src="/assets/images/user-icon.png" alt="usuario-icon">
               <p> USUARIOS(sin page) </p>
             </div>
         </li>
-        <li class="card" >
-            <a routerLink="/menu/tienda"> <div class="tienda"></div> </a>
+        <li class="card" id="tienda" >
+            <a routerLink="/menu/tienda"> <div class="tienda-recuadro"></div> </a>
             <div class="icon-container">
-              <img class="icon" src="https://png.pngtree.com/png-vector/20190917/ourlarge/pngtree-store-icon-in-line-style-png-image_1736161.jpg" alt="tienda-icon">
+              <img class="icon" src="/assets/images/shop-icon.png" alt="tienda-icon">
               <p> TIENDA(sin page) </p>
             </div>
         </li>
-        <li class="card" >
-            <a routerLink="/menu/cuentas-bancarias"> <div class="cuentasB"></div> </a>
+        <li class="card" id="cuentasB" >
+            <a routerLink="/menu/cuentas-bancarias"> <div class="cuentasB-recuadro"></div> </a>
             <div class="icon-container">
-              <img class="icon" src="asd2" alt="cuenta bancaria-icon">
+              <img class="icon" src="/assets/images/cuentaB-icon.png" alt="cuenta bancaria-icon">
               <p> CUENTA BANCARIA </p>
             </div>
         </li>
