Usuario, css heredado
- crud usuarios, falta editar y eliminar
- nuevo formato para css, herencia de styles.
- formatee la clase angular.json
- cambios minimos

--- a/gestion-mercado/src/app/pages/menu-page/menu-page.html
+++ b/gestion-mercado/src/app/pages/menu-page/menu-page.html
@@ -18,13 +18,14 @@
             <div class="icon-container">
               <img class="icon" src="/assets/images/productos-icon.png" alt="producto-icon">
               <p> PRODUCTOS </p>
+              <p> (cambiar imagen👍) </p>
             </div>
         </li>
         <li class="card" id="usuarios" >
             <a routerLink="/menu/usuarios"> <div class="usuarios-recuadro"></div> </a>
             <div class="icon-container">
               <img class="icon" src="/assets/images/user-icon.png" alt="usuario-icon">
-              <p> USUARIOS(sin page) </p>
+              <p> USUARIOS </p>
             </div>
         </li>
         <li class="card" id="tienda" >
