--- a/gestion-mercado/src/styles.css
+++ b/gestion-mercado/src/styles.css
@@ -8,6 +8,10 @@
     --color4: #4A1B34;
     --color5: #291C2C;
     --color6: #130412;
+    --rosita: rgb(247, 192, 201);
+    --rosa: rgb(245, 165, 179);
+    --rosa-oscuro: rgb(247, 130, 149);
+
     /*Otros*/
     --blanco: white;
     --blanco-noFulminanteDeOjos: rgb(187, 187, 187);
