--- a/gestion-mercado/src/app/pages/usuarios-pages/usuarios-list/usuarios-list.html
+++ b/gestion-mercado/src/app/pages/usuarios-pages/usuarios-list/usuarios-list.html
@@ -17,9 +17,9 @@
         <tr>
           <td>{{ usuario.usuarioId }}</td>
           <td>{{ usuario.email }}</td>
-          <td>
-            <button> Eliminar </button>
-            <button> Editar </button>
+          <td class="botones">
+            <button class="btnEliminar"> Eliminar </button>
+            <button class="btnEditar"> Editar </button>
           </td>
         </tr>
       }
