--- a/gestion-mercado/src/app/pages/menu-page/menu-page.html
+++ b/gestion-mercado/src/app/pages/menu-page/menu-page.html
@@ -32,7 +32,7 @@
             <a routerLink="/menu/tienda"> <div class="tienda-recuadro"></div> </a>
             <div class="icon-container">
               <img class="icon" src="/assets/images/shop-icon.png" alt="tienda-icon">
-              <p> TIENDA(sin page) </p>
+              <p> TIENDA </p>
             </div>
         </li>
         <li class="card" id="cuentasB" >
@@ -40,6 +40,13 @@
             <div class="icon-container">
               <img class="icon" src="/assets/images/cuentaB-icon.png" alt="cuenta bancaria-icon">
               <p> CUENTA BANCARIA </p>
+            </div>
+        </li>
+        <li class="card" id="duenios" >
+            <a routerLink="/menu/duenios"> <div class="duenios-recuadro"></div> </a>
+            <div class="icon-container">
+              <img class="icon" src="" alt="duenio-icon">
+              <p> DUENIOS </p>
             </div>
         </li>
       </ul>
