--- a/gestion-mercado/src/app/pages/menu-page/menu-page.html
+++ b/gestion-mercado/src/app/pages/menu-page/menu-page.html
@@ -1,54 +1,68 @@
-<main class = "contenido">
-    <h2> MENÚ DE ADMIN </h2>
-    <div class="breadcrumb">
-      <p> MENÚ > (hacer breacrumb)</p>
-    </div>
-    <p> (poner un if q printee el tipo de rol actual)  </p>
-    <nav class="menus-container">
-      <ul class="menus">
-        <li class="card" id="personas" >
-            <a routerLink="/menu/personas"> <div class="personas-recuadro"></div> </a>
-            <div class="icon-container">
-              <img class="icon" src="/assets/images/persona-icon.png" alt="persona-icon">
-              <p> PERSONAS </p>
-            </div>
-        </li>
-        <li class="card" id="productos" >
-            <a routerLink="/menu/productos"> <div class="productos-recuadro"></div> </a>
-            <div class="icon-container">
-              <img class="icon" src="/assets/images/productos-icon.png" alt="producto-icon">
-              <p> PRODUCTOS </p>
-              <p> (cambiar imagen👍) </p>
-            </div>
-        </li>
-        <li class="card" id="usuarios" >
-            <a routerLink="/menu/usuarios"> <div class="usuarios-recuadro"></div> </a>
-            <div class="icon-container">
-              <img class="icon" src="/assets/images/user-icon.png" alt="usuario-icon">
-              <p> USUARIOS </p>
-            </div>
-        </li>
-        <li class="card" id="tienda" >
-            <a routerLink="/menu/tienda"> <div class="tienda-recuadro"></div> </a>
-            <div class="icon-container">
-              <img class="icon" src="/assets/images/shop-icon.png" alt="tienda-icon">
-              <p> TIENDA </p>
-            </div>
-        </li>
-        <li class="card" id="cuentasB" >
-            <a routerLink="/menu/cuentas-bancarias"> <div class="cuentasB-recuadro"></div> </a>
-            <div class="icon-container">
-              <img class="icon" src="/assets/images/cuentaB-icon.png" alt="cuenta bancaria-icon">
-              <p> CUENTA BANCARIA </p>
-            </div>
-        </li>
-        <li class="card" id="duenios" >
-            <a routerLink="/menu/duenios"> <div class="duenios-recuadro"></div> </a>
-            <div class="icon-container">
-              <img class="icon" src="" alt="duenio-icon">
-              <p> DUENIOS </p>
-            </div>
-        </li>
-      </ul>
-    </nav>
+<main class="contenido">
+  <h2>MENÚ DE ADMIN</h2>
+  <div class="breadcrumb">
+    <p>MENÚ > (hacer breacrumb)</p>
+  </div>
+  <p>(poner un if q printee el tipo de rol actual)</p>
+  <nav class="menus-container">
+    <ul class="menus">
+      <li class="card" id="personas">
+        <a routerLink="/menu/personas"> <div class="personas-recuadro"></div> </a>
+        <div class="icon-container">
+          <img class="icon" src="/assets/images/persona-icon.png" alt="persona-icon" />
+          <p>PERSONAS</p>
+        </div>
+      </li>
+      <li class="card" id="productos">
+        <a routerLink="/menu/productos"> <div class="productos-recuadro"></div> </a>
+        <div class="icon-container">
+          <img class="icon" src="/assets/images/productos-icon.png" alt="producto-icon" />
+          <p>PRODUCTOS</p>
+          <p>(cambiar imagen👍)</p>
+        </div>
+      </li>
+      <li class="card" id="usuarios">
+        <a routerLink="/menu/usuarios"> <div class="usuarios-recuadro"></div> </a>
+        <div class="icon-container">
+          <img class="icon" src="/assets/images/user-icon.png" alt="usuario-icon" />
+          <p>USUARIOS</p>
+        </div>
+      </li>
+      <li class="card" id="tienda">
+        <a routerLink="/menu/tienda"> <div class="tienda-recuadro"></div> </a>
+        <div class="icon-container">
+          <img class="icon" src="/assets/images/shop-icon.png" alt="tienda-icon" />
+          <p>TIENDA</p>
+        </div>
+      </li>
+      <li class="card" id="cuentasB">
+        <a routerLink="/menu/cuentas-bancarias"> <div class="cuentasB-recuadro"></div> </a>
+        <div class="icon-container">
+          <img class="icon" src="/assets/images/cuentaB-icon.png" alt="cuenta bancaria-icon" />
+          <p>CUENTA BANCARIA</p>
+        </div>
+      </li>
+      <li class="card" id="duenios">
+        <a routerLink="/menu/duenios"> <div class="duenios-recuadro"></div> </a>
+        <div class="icon-container">
+          <img class="icon" src="" alt="duenio-icon" />
+          <p>DUENIOS</p>
+        </div>
+      </li>
+      <li class="card" id="empleados">
+        <a routerLink="/menu/empleados"> <div class="empleados-recuadro"></div> </a>
+        <div class="icon-container">
+          <img class="icon" src="" alt="duenio-icon" />
+          <p>EMPLEADOS</p>
+        </div>
+      </li>
+      <li class="card" id="clientes">
+        <a routerLink="/menu/clientes"> <div class="clientes-recuadro"></div> </a>
+        <div class="icon-container">
+          <img class="icon" src="" alt="duenio-icon" />
+          <p>CLIENTES</p>
+        </div>
+      </li>
+    </ul>
+  </nav>
 </main>
