--- a/gestion-mercado/src/app/pages/tienda-pages/tiendas-form/tiendas-form.html
+++ b/gestion-mercado/src/app/pages/tienda-pages/tiendas-form/tiendas-form.html
@@ -3,22 +3,22 @@
 <form [formGroup]="form" (ngSubmit)="saveTienda()">
   <div>
     <label>Nombre: </label>
-    <input type="text" formControlName="nombre">
+    <input type="text" formControlName="nombre" />
   </div>
   <div>
     <label>Dirección: </label>
-    <input type ="text" formControlName="direccion">
+    <input type="text" formControlName="direccion" />
   </div>
   <div>
     <label>Caja: </label>
-    <input type ="number" formControlName="caja">
+    <input type="number" formControlName="caja" />
   </div>
   <div>
-    <label>ID Dueño: </label>
-    <input type ="number" formControlName="duenio">
+    <label>Dni del Dueño: </label>
+    <input type="number" formControlName="duenioDni" />
   </div>
 
-  <div class = "botones">
+  <div class="botones">
     <button type="submit" [disabled]="form.invalid">Actualizar</button>
     <button type="button" (click)="cancelarUpdate()">Cancelar</button>
   </div>
