--- a/gestion-mercado/src/app/pages/tienda-pages/tiendas-list/tiendas-list.html
+++ b/gestion-mercado/src/app/pages/tienda-pages/tiendas-list/tiendas-list.html
@@ -3,8 +3,9 @@
 <div>
   @for (t of tienda(); track $index) {
   <div>
-    <h3>{{t.nombre}}</h3>
-    <h4>{{t.duenio}}</h4>
+    <p>{{t.tiendaId}}</p>
+    <p>{{t.nombre}}</p>
+    <p>{{t.duenio}}</p>
     <p>{{t.direccion}}</p>
     <p>${{t.caja}}</p>
   </div>
