--- a/gestion-mercado/src/app/pages/menu-page/menu-page.css
+++ b/gestion-mercado/src/app/pages/menu-page/menu-page.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, 15dvw);
   justify-content: space-around;
+  gap: 4rem 0rem;
 }
 
 .card {
