fixes y duenio form
correción rutas, persona form, tablas y otras correciones menores

--- a/gestion-mercado/src/app/pages/cuentaBancaria-pages/cuentas-bancarias-list/cuentas-bancarias-list.html
+++ b/gestion-mercado/src/app/pages/cuentaBancaria-pages/cuentas-bancarias-list/cuentas-bancarias-list.html
@@ -1,6 +1,10 @@
 
 <h2>Listado de Cuentas Bancarias</h2>
 
+<div class="botones">
+    <button type="button" class="btnAgregar" routerLink="/menu/cuentas-bancarias/form"> Agregar </button>
+</div>
+
 <table border="1">
   <thead>
     <tr>
