--- a/gestion-mercado/src/app/pages/menu-page/menu-page.html
+++ b/gestion-mercado/src/app/pages/menu-page/menu-page.html
@@ -6,63 +6,104 @@
   <p>(poner un if q printee el tipo de rol actual)</p>
   <nav class="menus-container">
     <ul class="menus">
+
+      <!-- PERSONAS -->
       <li class="card" id="personas">
         <a routerLink="/menu/personas"> <div class="personas-recuadro"></div> </a>
         <div class="icon-container">
           <img class="icon" src="/assets/images/persona-icon.png" alt="persona-icon" />
-          <p>PERSONAS</p>
+          <p> PERSONAS </p>
         </div>
       </li>
-      <li class="card" id="productos">
-        <a routerLink="/menu/productos"> <div class="productos-recuadro"></div> </a>
-        <div class="icon-container">
-          <img class="icon" src="/assets/images/productos-icon.png" alt="producto-icon" />
-          <p>PRODUCTOS</p>
-          <p>(cambiar imagen👍)</p>
-        </div>
-      </li>
-      <li class="card" id="usuarios">
-        <a routerLink="/menu/usuarios"> <div class="usuarios-recuadro"></div> </a>
-        <div class="icon-container">
-          <img class="icon" src="/assets/images/user-icon.png" alt="usuario-icon" />
-          <p>USUARIOS</p>
-        </div>
-      </li>
-      <li class="card" id="tienda">
-        <a routerLink="/menu/tienda"> <div class="tienda-recuadro"></div> </a>
-        <div class="icon-container">
-          <img class="icon" src="/assets/images/shop-icon.png" alt="tienda-icon" />
-          <p>TIENDA</p>
-        </div>
-      </li>
-      <li class="card" id="cuentasB">
-        <a routerLink="/menu/cuentas-bancarias"> <div class="cuentasB-recuadro"></div> </a>
-        <div class="icon-container">
-          <img class="icon" src="/assets/images/cuentaB-icon.png" alt="cuenta bancaria-icon" />
-          <p>CUENTA BANCARIA</p>
-        </div>
-      </li>
+
+      <!-- DUENIOS -->
       <li class="card" id="duenios">
         <a routerLink="/menu/duenios"> <div class="duenios-recuadro"></div> </a>
         <div class="icon-container">
           <img class="icon" src="" alt="duenio-icon" />
-          <p>DUENIOS</p>
+          <p> DUENIOS </p>
         </div>
       </li>
+
+      <!-- EMPLEADOS -->
       <li class="card" id="empleados">
         <a routerLink="/menu/empleados"> <div class="empleados-recuadro"></div> </a>
         <div class="icon-container">
           <img class="icon" src="" alt="duenio-icon" />
-          <p>EMPLEADOS</p>
+          <p> EMPLEADOS </p>
         </div>
       </li>
+
+      <!-- CLIENTES -->
       <li class="card" id="clientes">
         <a routerLink="/menu/clientes"> <div class="clientes-recuadro"></div> </a>
         <div class="icon-container">
           <img class="icon" src="" alt="duenio-icon" />
-          <p>CLIENTES</p>
+          <p> CLIENTES </p>
         </div>
       </li>
+
+      <!-- USUARIOS -->
+      <li class="card" id="usuarios">
+        <a routerLink="/menu/usuarios"> <div class="usuarios-recuadro"></div> </a>
+        <div class="icon-container">
+          <img class="icon" src="/assets/images/user-icon.png" alt="usuario-icon" />
+          <p> USUARIOS </p>
+        </div>
+      </li>
+
+      <!-- -------------------------------------------------------------------------------------------------------- -->
+
+      <!-- PRODUCTOS -->
+      <li class="card" id="productos">
+        <a routerLink="/menu/productos"> <div class="productos-recuadro"></div> </a>
+        <div class="icon-container">
+          <img class="icon" src="/assets/images/productos-icon.png" alt="producto-icon" />
+          <p> PRODUCTOS  </p>
+          <p>(cambiar imagen👍)</p>
+        </div>
+      </li>
+
+      <!-- LOTES -->
+      <li class="card" id="lotes">
+        <a routerLink="/menu/lotes"> <div class="lotes-recuadro"></div> </a>
+        <div class="icon-container">
+          <img class="icon" src="/assets/images/lotes-icon.png" alt="lote-icon" />
+          <p> LOTES </p>
+        </div>
+      </li>
+
+      <!-- INVENTARIOS -->
+      <li class="card" id="inventarios">
+        <a routerLink="/menu/inventarios"> <div class="inventarios-recuadro"></div> </a>
+        <div class="icon-container">
+          <img class="icon" src="/assets/images/inventarios-icon.png" alt="inventarios-icon" />
+          <p> INVENTARIOS </p>
+        </div>
+      </li>
+
+      <!-- -------------------------------------------------------------------------------------------------------- -->
+
+      <!-- TIENDA -->
+      <li class="card" id="tienda">
+        <a routerLink="/menu/tienda"> <div class="tienda-recuadro"></div> </a>
+        <div class="icon-container">
+          <img class="icon" src="/assets/images/shop-icon.png" alt="tienda-icon" />
+          <p> TIENDA </p>
+        </div>
+      </li>
+
+      <!-- CUENTAS B -->
+      <li class="card" id="cuentasB">
+        <a routerLink="/menu/cuentas-bancarias"> <div class="cuentasB-recuadro"></div> </a>
+        <div class="icon-container">
+          <img class="icon" src="/assets/images/cuentaB-icon.png" alt="cuenta bancaria-icon" />
+          <p> CUENTA BANCARIA </p>
+        </div>
+      </li>
+
+
+
     </ul>
   </nav>
 </main>
