--- a/gestion-mercado/src/app/pages/tienda-pages/tiendas-form/tiendas-form.html
+++ b/gestion-mercado/src/app/pages/tienda-pages/tiendas-form/tiendas-form.html
@@ -1,4 +1,4 @@
-<h2>Actualizar Tienda</h2>
+<h2> {{ isEditMode() ? 'Editar Tienda' : 'Registrar Tienda' }} </h2>
 
 <form [formGroup]="form" (ngSubmit)="saveTienda()">
   <div>
