--- a/gestion-mercado/src/app/pages/menu-page/menu-page.html
+++ b/gestion-mercado/src/app/pages/menu-page/menu-page.html
@@ -9,7 +9,7 @@
 
       <!-- PERSONAS -->
       <li class="card" id="personas">
-        <a routerLink="/menu/personas"> <div class="personas-recuadro"></div> </a>
+        <a routerLink="/menu/personas"> <div class="recuadro"></div> </a>
         <div class="icon-container">
           <img class="icon" src="/assets/images/persona-icon.png" alt="persona-icon" />
           <p> PERSONAS </p>
@@ -18,7 +18,7 @@
 
       <!-- DUENIOS -->
       <li class="card" id="duenios">
-        <a routerLink="/menu/duenios"> <div class="duenios-recuadro"></div> </a>
+        <a routerLink="/menu/duenios"> <div class="recuadro"></div> </a>
         <div class="icon-container">
           <img class="icon" src="" alt="duenio-icon" />
           <p> DUENIOS </p>
@@ -27,7 +27,7 @@
 
       <!-- EMPLEADOS -->
       <li class="card" id="empleados">
-        <a routerLink="/menu/empleados"> <div class="empleados-recuadro"></div> </a>
+        <a routerLink="/menu/empleados"> <div class="recuadro"></div> </a>
         <div class="icon-container">
           <img class="icon" src="" alt="duenio-icon" />
           <p> EMPLEADOS </p>
@@ -36,7 +36,7 @@
 
       <!-- CLIENTES -->
       <li class="card" id="clientes">
-        <a routerLink="/menu/clientes"> <div class="clientes-recuadro"></div> </a>
+        <a routerLink="/menu/clientes"> <div class="recuadro"></div> </a>
         <div class="icon-container">
           <img class="icon" src="" alt="duenio-icon" />
           <p> CLIENTES </p>
@@ -45,7 +45,7 @@
 
       <!-- USUARIOS -->
       <li class="card" id="usuarios">
-        <a routerLink="/menu/usuarios"> <div class="usuarios-recuadro"></div> </a>
+        <a routerLink="/menu/usuarios"> <div class="recuadro"></div> </a>
         <div class="icon-container">
           <img class="icon" src="/assets/images/user-icon.png" alt="usuario-icon" />
           <p> USUARIOS </p>
@@ -56,7 +56,7 @@
 
       <!-- PRODUCTOS -->
       <li class="card" id="productos">
-        <a routerLink="/menu/productos"> <div class="productos-recuadro"></div> </a>
+        <a routerLink="/menu/productos"> <div class="recuadro"></div> </a>
         <div class="icon-container">
           <img class="icon" src="/assets/images/productos-icon.png" alt="producto-icon" />
           <p> PRODUCTOS  </p>
@@ -66,7 +66,7 @@
 
       <!-- LOTES -->
       <li class="card" id="lotes">
-        <a routerLink="/menu/lotes"> <div class="lotes-recuadro"></div> </a>
+        <a routerLink="/menu/lotes"> <div class="recuadro"></div> </a>
         <div class="icon-container">
           <img class="icon" src="/assets/images/lotes-icon.png" alt="lote-icon" />
           <p> LOTES </p>
@@ -75,7 +75,7 @@
 
       <!-- INVENTARIOS -->
       <li class="card" id="inventarios">
-        <a routerLink="/menu/inventarios"> <div class="inventarios-recuadro"></div> </a>
+        <a routerLink="/menu/inventarios"> <div class="recuadro"></div> </a>
         <div class="icon-container">
           <img class="icon" src="/assets/images/inventarios-icon.png" alt="inventarios-icon" />
           <p> INVENTARIOS </p>
@@ -86,7 +86,7 @@
 
       <!-- TIENDA -->
       <li class="card" id="tienda">
-        <a routerLink="/menu/tienda"> <div class="tienda-recuadro"></div> </a>
+        <a routerLink="/menu/tienda"> <div class="recuadro"></div> </a>
         <div class="icon-container">
           <img class="icon" src="/assets/images/shop-icon.png" alt="tienda-icon" />
           <p> TIENDA </p>
@@ -95,7 +95,7 @@
 
       <!-- CUENTAS B -->
       <li class="card" id="cuentasB">
-        <a routerLink="/menu/cuentas-bancarias"> <div class="cuentasB-recuadro"></div> </a>
+        <a routerLink="/menu/cuentas-bancarias"> <div class="recuadro"></div> </a>
         <div class="icon-container">
           <img class="icon" src="/assets/images/cuentaB-icon.png" alt="cuenta bancaria-icon" />
           <p> CUENTA BANCARIA </p>
