--- a/gestion-mercado/src/app/pages/tienda-pages/tienda-page/tienda-page.html
+++ b/gestion-mercado/src/app/pages/tienda-pages/tienda-page/tienda-page.html
@@ -3,8 +3,8 @@
         <app-tiendas-list></app-tiendas-list>
     </div>
 
-    @if (tiendaToEdit() || !tiendaCreada()) {
-      
+
+    @if (tiendaToEdit() || !existeTienda()) {
       <div class="tienda-form-panel">
           <app-tiendas-form></app-tiendas-form>
       </div>
