--- a/gestion-mercado/src/app/pages/menu-page/menu-page.html
+++ b/gestion-mercado/src/app/pages/menu-page/menu-page.html
@@ -102,6 +102,15 @@
         </div>
       </li>
 
+      <!-- TRANSACCIONES -->
+      <li class="card" id="transacciones">
+        <a routerLink="/menu/transacciones"> <div class="recuadro"></div> </a>
+        <div class="icon-container">
+          <img class="icon" src="/assets/images/transaccion-icon.png" alt="transaccion-icon" />
+          <p> TRANSACCIONES </p>
+        </div>
+      </li>
+
 
 
     </ul>
