--- a/gestion-mercado/src/app/pages/persona-pages/persona-form/persona-form.html
+++ b/gestion-mercado/src/app/pages/persona-pages/persona-form/persona-form.html
@@ -1,27 +1,35 @@
 <h2> {{isEditMode() ? 'Editar Persona' : 'Registrar Persona'}} </h2>
 
 <form [formGroup]="form" (ngSubmit)="savePersona()">
- <div>
+  <div class = "campo">
     <label>Nombre: </label>
     <input type="text" formControlName="nombre">
- </div>
- <div>
-   <label>Dni: </label>
+    @if (form.get('nombre')?.invalid && form.get('nombre')?.touched) {
+      <span class = "error">El nombre de la persona es requerido.</span>
+    }
+  </div>
+  <div class = "campo">
+    <label>Dni: </label>
     <input type="number" formControlName="dni">
- </div>
- <div>
-   <label>Edad: </label>
+    @if (form.get('dni')?.invalid && form.get('dni')?.touched) {
+      <span class = "error">El DNI debe tener al menos 7 dígitos</span>
+    }
+  </div>
+  <div class = "campo">
+    <label>Edad: </label>
     <input type="number" formControlName="edad">
- </div>
+    @if (form.get('edad')?.invalid && form.get('edad')?.touched) {
+      <span class = "error">La persona debe ser mayor de edad (18).</span>
+    }
+  </div>
 
- <div class="botones">
-  <button type="submit"[disabled]="form.invalid">
-   {{ isEditMode() ? 'Actualizar' : 'Registrar' }}
-  </button>
+  <div class="botones">
+    <button type="submit"[disabled]="form.invalid">
+      {{ isEditMode() ? 'Actualizar' : 'Registrar' }}
+    </button>
 
   @if (isEditMode()) {
     <button type="button" (click)="cancelEdit()" >Cancelar</button>
   }
- </div>
-
+  </div>
 </form>
