--- a/gestion-mercado/src/app/pages/menu-page/menu-page.html
+++ b/gestion-mercado/src/app/pages/menu-page/menu-page.html
@@ -111,6 +111,17 @@
         </div>
       </li>
 
+      <!-- -------------------------------------------------------------------------------------------------------- -->
+
+      <!-- PEDIDOS -->
+      <li class="card" id="pedidos">
+        <a routerLink="/menu/pedidos"> <div class="recuadro"></div> </a>
+        <div class="icon-container">
+          <img class="icon" src="/assets/images/pedidos-icon.png" alt="pedido-icon" />
+          <p> PEDIDOS  </p>
+        </div>
+      </li>
+
 
 
     </ul>
